Fix typing animation extra space at beginning

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ li a:hover {
 
 #code {
     font-family: monospace;
-    font-size: 0.9em;
+    font-size: 0.85em;
     text-align: left;
     letter-spacing: 0.1em;
     background-color: #000;
